Added homepage of API docs, added request PUT and DELETE for quote, added request DELETE for author

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <body>
 
 <h1>QUOTES</h1>
-<p>Application will generate random quote from datebase.aaaaaa</p>
+<p>Application will generate random quote from datebase.</p>
 
 <form>
     <label for="quote">Quote:</label><br>
